--- a/bundles/managed-api-service/1.23.0/manifests/managed-api-service.clusterserviceversion.yaml
+++ b/bundles/managed-api-service/1.23.0/manifests/managed-api-service.clusterserviceversion.yaml
@@ -54,7 +54,7 @@ metadata:
     containerImage: quay.io/integreatly/managed-api-service:rhoam-v1.23.0-rc1
     olm.properties: '[{"type": "olm.maxOpenShiftVersion", "value": "4.10"}]'
     operatorframework.io/suggested-namespace: redhat-rhoam-operator
-    operators.operatorframework.io/builder: operator-sdk-v1.11.0+git
+    operators.operatorframework.io/builder: operator-sdk-v1.12.0
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v2
     support: RHOAM
     serviceAffecting: "false"
