--- a/bundles/multitenant-managed-api-service/multitenant-managed-api-service.package.yaml
+++ b/bundles/multitenant-managed-api-service/multitenant-managed-api-service.package.yaml
@@ -1,5 +1,5 @@
 channels:
-  - currentCSV: multitenant-managed-api-service.v1.22.0
+  - currentCSV: managed-api-service.v1.23.0
     name: rhmi
-defaultChannel: rhmi
-packageName: multitenant-managed-api-service
+defaultChannel: stable
+packageName: managed-api-service
