MGDAPI-4039 : Updating Scripts

--- a/scripts/testing-idp-template.yml
+++ b/scripts/testing-idp-template.yml
@@ -119,7 +119,7 @@ parameters:
     required: true
   - description: The namespace to deploy into
     name: NAMESPACE
-    value: redhat-rhmi-rhsso
+    value: redhat-rhoam-rhsso
   - description: Realm name
     name: REALM
     value: testing-idp
