--- a/scripts/user-template.yml
+++ b/scripts/user-template.yml
@@ -31,7 +31,7 @@ objects:
 parameters:
   - description: The namespace to deploy into
     name: NAMESPACE
-    value: redhat-rhmi-rhsso
+    value: redhat-rhoam-rhsso
   - description: Realm name
     name: REALM
     value: testing-idp
