--- a/.codecov.yml
+++ b/.codecov.yml
@@ -7,6 +7,25 @@ coverage:
   round: down
   range: "20...100"
   ignore:
+    - "make"
+    - "config"
+    - "openshift-ci"
+    - "bundles"
+    - "deploy"
+    - "envs"
+    - "guides"
+    - "hack"
+    - "manifests"
+    - "packagemanifests"
+    - "prodsec-manifests"
+    - "products"
+    - "templates"
+    - "test-cases"
+    - "test-dependancy"
+    - "tmp"
+    - "vendor"
+    - "version"
+    - "test"
     - "**/*_types.go"
     - "**/*_moq.go"
     - "pkg/config"
