--- a/config/crd/bases/integreatly.org_rhmis.yaml
+++ b/config/crd/bases/integreatly.org_rhmis.yaml
@@ -104,6 +104,15 @@ spec:
           status:
             description: RHMIStatus defines the observed state of RHMI
             properties:
+              customDomain:
+                properties:
+                  enabled:
+                    type: boolean
+                  error:
+                    type: string
+                required:
+                - enabled
+                type: object
               customSmtp:
                 properties:
                   enabled:
