--- a/.codecov.yml
+++ b/.codecov.yml
@@ -17,8 +17,8 @@ coverage:
       default:
         target: auto
         threshold: 0%
-    patch: false
-    changes: false
+    patch: off
+    changes: off
 
 parsers:
   gcov:
