MGDAPI-4016 Removed separate version tracking for MT RHOAM

--- a/envs/multitenant-managed-api.env
+++ b/envs/multitenant-managed-api.env
@@ -1,5 +1,5 @@
 PROJECT=multitenant-managed-api-service
-TAG ?= $(MULTITENANT_RHOAM_TAG)
+TAG ?= $(RHOAM_TAG)
 OPERATOR_IMAGE=$(REG)/$(ORG)/$(PROJECT):v$(TAG)
 NAMESPACE_PREFIX ?= sandbox-rhoam-
 APPLICATION_REPO ?= multitenant-managed-api-service
