MGDAPI-3209 prepare for release rhoam-v1.24.0-rc1

--- a/bundles/managed-api-service/1.24.0/manifests/managed-api-service.clusterserviceversion.yaml
+++ b/bundles/managed-api-service/1.24.0/manifests/managed-api-service.clusterserviceversion.yaml
@@ -51,15 +51,16 @@ metadata:
     capabilities: Basic Install
     categories: Integration & Delivery
     certified: "false"
-    containerImage: quay.io/integreatly/managed-api-service:master
+    containerImage: quay.io/integreatly/managed-api-service:rhoam-v1.24.0-rc1
     olm.properties: '[{"type": "olm.maxOpenShiftVersion", "value": "4.10"}]'
     operatorframework.io/suggested-namespace: redhat-rhoam-operator
-    operators.operatorframework.io/builder: operator-sdk-v1.11.0+git
+    operators.operatorframework.io/builder: operator-sdk-v1.21.0
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v2
     support: RHOAM
+    serviceAffecting: "true"
     containerImages: |-
       [
-        {"component_name":"3scale-operator.v0.8.4","component_url":"registry.redhat.io/3scale-amp2/3scale-rhel7-operator@sha256:d9ecd9ffb167908d2825b96491edbc138b5b08456775feaaaf99b6fd4f50c19e"},{"component_name":"backend","component_url":"registry.redhat.io/3scale-amp2/backend-rhel8@sha256:c01bd40b54dabbbdb70e34ab1b2e23dd86f16d6381ea07606cb12c96b952f3a3"},{"component_name":"apicast","component_url":"registry.redhat.io/3scale-amp2/apicast-gateway-rhel8@sha256:f0e9f64c353fdbee3bf7ec0eaf070c3b75330ef659a881ec4ebc874ba584d085"},{"component_name":"system","component_url":"registry.redhat.io/3scale-amp2/system-rhel7@sha256:9989cbbcb37f0a1421ca61a8412efab22b23723e5e987177542166124c30f4f0"},{"component_name":"zync","component_url":"registry.redhat.io/3scale-amp2/zync-rhel8@sha256:35f8ed5e67d87976b2317648d5422d62ed523f69075d30d4ff94a07210d3fc29"},{"component_name":"system_memcached","component_url":"registry.redhat.io/3scale-amp2/memcached-rhel7@sha256:7a379aa1503d7f839e4b3250ad864506f2b417fe728d43fb29cd78c041089e0f"},{"component_name":"cloud-resources.v0.39.0","component_url":"quay.io/integreatly/cloud-resource-operator:v0.39.0"},{"component_name":"grafana-operator.v4.2.0","component_url":"quay.io/grafana-operator/grafana-operator:v4.2.0"},{"component_name":"marin3r.v0.10.0","component_url":"quay.io/3scale/marin3r:v0.10.0"},{"component_name":"keycloak-operator.v18.0.0","component_url":"quay.io/keycloak/keycloak-operator:18.0.0-legacy"},{"component_name":"observability-operator.v3.0.11","component_url":"quay.io/rhoas/observability-operator:v3.0.11"},{"component_name":"3scale-openshift-servce-mesh","component_url":"registry.redhat.io/openshift-service-mesh/proxyv2-rhel8:2.1.2-2"},{"component_name":"marin3r-limitador","component_url":"quay.io/3scale/limitador:v0.5.1"},{"component_name":"observability-grafana-plugins-init","component_url":"quay.io/grafana-operator/grafana_plugins_init:0.0.6"},{"component_name":"observability-origin-oauth-proxy","component_url":"quay.io/openshift/origin-oauth-proxy:4.8"},{"component_name":"observability-prometheus-operator","component_url":"quay.io/prometheus-operator/prometheus-operator@sha256:066fce4a6b7392f07f7179b59ed4448bacc0767277637de99809449637be924b"},{"component_name":"rhsso-sso-openshift","component_url":"registry.redhat.io/rh-sso-7/sso75-openshift-rhel8:7.5-27"}]
+        {"component_name":"3scale-operator.v0.9.0","component_url":"registry.redhat.io/3scale-amp2/3scale-rhel7-operator@sha256:b6805840aed8a3cdd58b25383a821c1f85bb4c1959259d9ac4812e56d6651202"},{"component_name":"backend","component_url":"registry.redhat.io/3scale-amp2/backend-rhel8@sha256:d08479d6a1607099f9a125bd21c3c8a685520e35c31aa799a57f211b3192389b"},{"component_name":"apicast","component_url":"registry.redhat.io/3scale-amp2/apicast-gateway-rhel8@sha256:d7af57e97f10c4f2d8ac1ae8f4c4436b6323d2d2ba60dbbb3b50d6328c92133f"},{"component_name":"system","component_url":"registry.redhat.io/3scale-amp2/system-rhel7@sha256:27904327f838ab872c6adf1e4a025b8cd0ff1ca425bfc63816c5ec2253cb79b5"},{"component_name":"zync","component_url":"registry.redhat.io/3scale-amp2/zync-rhel8@sha256:c231dfc49feb71f250a30e6f724fc29eefea3cf30b8bf92547fc28e616f01864"},{"component_name":"system_memcached","component_url":"registry.redhat.io/3scale-amp2/memcached-rhel7@sha256:4a69109a33167ac9a13088d1da608e32feb31cc394be1c350a7d36e1d88882d3"},{"component_name":"cloud-resources.v0.40.0","component_url":"quay.io/integreatly/cloud-resource-operator:v0.40.0"},{"component_name":"grafana-operator.v4.2.0","component_url":"quay.io/grafana-operator/grafana-operator:v4.2.0"},{"component_name":"marin3r.v0.10.0","component_url":"quay.io/3scale/marin3r:v0.10.0"},{"component_name":"keycloak-operator.v18.0.0","component_url":"quay.io/keycloak/keycloak-operator:18.0.0-legacy"},{"component_name":"observability-operator.v3.0.10","component_url":"quay.io/rhoas/observability-operator:v3.0.10"},{"component_name":"3scale-openshift-servce-mesh","component_url":"registry.redhat.io/openshift-service-mesh/proxyv2-rhel8:2.1.2-2"},{"component_name":"marin3r-limitador","component_url":"quay.io/3scale/limitador:v0.5.1"},{"component_name":"observability-grafana-plugins-init","component_url":"quay.io/grafana-operator/grafana_plugins_init:0.0.6"},{"component_name":"observability-origin-oauth-proxy","component_url":"registry.redhat.io/openshift4/ose-oauth-proxy@sha256:9a5ee95f8e99a63a4ad0e8b01683ac03c75337bbbe3d504d199a97f9921eb0c1"},{"component_name":"observability-prometheus-operator","component_url":"quay.io/prometheus-operator/prometheus-operator@sha256:066fce4a6b7392f07f7179b59ed4448bacc0767277637de99809449637be924b"},{"component_name":"rhsso-sso-openshift","component_url":"registry.redhat.io/rh-sso-7/sso75-openshift-rhel8:7.5-27"}]
   name: managed-api-service.v1.24.0
   namespace: placeholder
 spec:
@@ -506,6 +507,8 @@ spec:
             strategy: {}
             template:
               metadata:
+                annotations:
+                  kubectl.kubernetes.io/default-container: manager
                 labels:
                   name: rhmi-operator
               spec:
@@ -537,7 +540,7 @@ spec:
                         value: default@test.com
                       - name: QUOTA
                         value: "200"
-                    image: quay.io/integreatly/managed-api-service:master
+                    image: quay.io/integreatly/managed-api-service:rhoam-v1.24.0-rc1
                     imagePullPolicy: Always
                     name: rhmi-operator
                     ports:
