--- a/bundles/managed-api-service/1.24.0/tests/scorecard/config.yaml
+++ b/bundles/managed-api-service/1.24.0/tests/scorecard/config.yaml
@@ -2,6 +2,7 @@ apiVersion: scorecard.operatorframework.io/v1alpha3
 kind: Configuration
 metadata:
   name: config
+serviceaccount: rhoam-test-runner
 stages:
 - parallel: true
   tests:
