MGDAPI-4174 initial configuration of mkdocs and readthedocs

--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,6 @@ test-cases/package-lock.json
 ### Writing/debugging scorecard tests
 /bundle/*
 /bundle.Dockerfile
+
+### readthedocs/mkdocs
+/site
