MGDAPI-4257: Update method for getting API url

--- a/config/crd/bases/integreatly.org_rhmis.yaml
+++ b/config/crd/bases/integreatly.org_rhmis.yaml
@@ -35,6 +35,8 @@ spec:
           spec:
             description: RHMISpec defines the desired state of RHMI
             properties:
+              APIServer:
+                type: string
               alertFromAddress:
                 type: string
               alertingEmailAddress:
