--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -113,6 +113,12 @@ rules:
 - apiGroups:
   - config.openshift.io
   resources:
+  - apiservers
+  verbs:
+  - get
+- apiGroups:
+  - config.openshift.io
+  resources:
   - clusterversions
   - infrastructures
   - oauths
