--- a/config/secrets/custom-addon-secret.yaml
+++ b/config/secrets/custom-addon-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: template.openshift.io/v1
 kind: Template
 metadata:
-  name: quota-secret
+  name: addon-params-secret
 objects:
   - apiVersion: v1
     kind: Secret
@@ -14,6 +14,9 @@ objects:
       custom-smtp-password: ${PASSWORD}
       custom-smtp-port: ${PORT}
       custom-smtp-from_address: ${FROM}
+      sts-role-arn: ${StsRoleARN}
+      s3-access-key-id: ${S3_ACCESS_KEY_ID}
+      s3-secret-access-key: ${S3_SECRET_ACCESS_KEY}
 parameters:
   - name: QUOTA
     # QUOTA value is per 100,000
@@ -28,3 +31,9 @@ parameters:
     value: "567"
   - name: FROM
     value: "test@example.com"
+  - name: StsRoleARN
+    value: "arn:aws:iam::485026278258:role/12345"
+  - name: S3_ACCESS_KEY_ID
+    value: "123"
+  - name: S3_SECRET_ACCESS_KEY
+    value: "secret"
