--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -63,4 +63,15 @@ spec:
             value: "default@test.com"
           - name: QUOTA
             value: "200"
+        livenessProbe:
+          exec:
+            command:
+              - ls
+          initialDelaySeconds: 15
+          periodSeconds: 20
+          timeoutSeconds: 10
+        readinessProbe:
+          exec:
+            command:
+              - ls
       terminationGracePeriodSeconds: 10
