--- a/prometheus-unit-testing/test.yml
+++ b/prometheus-unit-testing/test.yml
@@ -4,44 +4,45 @@ rule_files:
 evaluation_interval: 1m
 
 tests:
-  # - interval: 1m
-  #   input_series:
-  #     - series: rhoam_version{version="x",to_version=""}
-  #       values: "1+0x20"
-  #   alert_rule_test:
-  #       #Rhoam_version is equal to 1 therefore present for 20 min / alert not expected to fire
-  #     - eval_time: 20m
-  #       alertname: CriticalMetricsMissing
-  #       exp_alerts: [] 
-  #       #Rhoam_version is equal to 0 therefore absent for 20 min / alert should fire
-  #     - eval_time: 40m
-  #       alertname: CriticalMetricsMissing
-  #       exp_alerts: 
-  #         - exp_labels: 
-  #             alertname: CriticalMetricsMissing
-  #             severity: critical
-  #           exp_annotations: 
-  #             description: >-
-  #               Missing Critical Metrics at 1.0
+  - interval: 1m
+    input_series:
+      - series: up{rhoam_version=""}
+        values: "1+0x10 0+0x10"
+    alert_rule_test:
+      # rhoam_version is presentfor 10m
+      # alert not expected to fire
+      - eval_time: 10m
+        alertname: CriticalMetricsMissing
+        exp_alerts: [ ]
+      # rhoam_version is missing for 10m
+      # alert expected to fire
+      - eval_time: 20m
+        alertname: CriticalMetricsMissing
+        exp_alerts:
+          - exp_labels:
+              severity: critical
+            exp_annotations:
+              message: metrics have been missing for more than 8 minutes
 
   - interval: 1m
     input_series:
-      - series: rhoam_version{version="x",to_version="",pod="y"}
-        values: "1+0x40"
-      - series: rhoam_custom_domain{version="x",to_version="",pod="y"}
-        values: "0+0x20 stale"
+      - series: rhoam_version{version=".*", to_version=""}
+        values: "1+0x10 1+0x10"
+      - series: up{rhoam_custom_domain=""}
+        values: "1+0x10 0+0x10"
     alert_rule_test:
-        #Rhoam_version is equal to 1 [ present ] / rhoam_custom_domain is equal to 0 [ not absent ] / successful scenario
+      # rhoam_version & rhoam_custom_domain are present for 10m
+      # alert not expected to fire
+      - eval_time: 10m
+        alertname: CriticalMetricsMissing
+        exp_alerts: [ ]
+      # rhoam_custom_domain is missing for 10m
+      # alert expected to fire
       - eval_time: 20m
         alertname: CriticalMetricsMissing
-        exp_alerts: []
-        #Rhoam_version is equal to 1 [ present ] / rhoam_custom_domain is stale [ non existant / absent ] / unsuccessful scenario
-      - eval_time: 40m
-        alertname: CriticalMetricsMissing
-        exp_alerts: 
-          - exp_labels: 
-              alertname: CriticalMetricsMissing
+        exp_alerts:
+          - exp_labels:
               severity: critical
-            exp_annotations: 
-              description: >-
-                Missing Critical Metrics at 1.0
+            exp_annotations:
+              message: metrics have been missing for more than 8 minutes
+     
