--- a/bundles/multitenant-managed-api-service/1.25.0/manifests/integreatly.org_rhmis.yaml
+++ b/bundles/multitenant-managed-api-service/1.25.0/manifests/integreatly.org_rhmis.yaml
@@ -2,7 +2,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.3.0
+    controller-gen.kubebuilder.io/version: v0.8.0
   creationTimestamp: null
   name: rhmis.integreatly.org
 spec:
@@ -30,6 +30,8 @@ spec:
             spec:
               description: RHMISpec defines the desired state of RHMI
               properties:
+                APIServer:
+                  type: string
                 alertFromAddress:
                   type: string
                 alertingEmailAddress:
@@ -89,6 +91,15 @@ spec:
             status:
               description: RHMIStatus defines the observed state of RHMI
               properties:
+                customDomain:
+                  properties:
+                    enabled:
+                      type: boolean
+                    error:
+                      type: string
+                  required:
+                    - enabled
+                  type: object
                 customSmtp:
                   properties:
                     enabled:
