--- a/prometheus-unit-testing/tests/critical_metrics_missing.yml
+++ b/prometheus-unit-testing/tests/critical_metrics_missing.yml
@@ -1,25 +1,47 @@
 rule_files:
   - ../rules/rhoam_general.yml
-evaluation_interval: 1m
 tests:
+  # The interval is closely tied to the values of the input series.
+  # It represents the duration between each value of the metrics.
   - interval: 1m
+    # The input series define the values for individual metrics throughout their lifecycle.
+    # They should be treated as a whole and not as individual test cases.
+    # `_` indicates a missing scrape sample.
+    # `stale` indicates a stale sample.
+    # `stale _x10` indicates the metric is missing for 10m.
+    # `0` is used as a dummy value to imply that the metric is present and its value is `0`.
+    # `0 0 0 0 0` series represent a metric that is present for 5m with a value of `0`.
+    # To improve readability and address high intervals one can use the expanding notation.
+    # `0 0 0 0 0` is equivalent to `0+0x4`.
+    # `a+bxc` becomes `a a+b a+(2*b) a+(3*b) … a+(c*b)`.
+    # `a-bxc` becomes `a a-b a-(2*b) a-(3*b) … a-(c*b)`.
     input_series:
+      # missing for 10m, present for 1m with value of `0`, missing for 10m, present for 85m with value of `0`.
       - series: kube_endpoint_address_available
         values: "stale _x10 0 stale _x10 0+0x84"
+      # missing for 10m, present for 13m with value of `0`, missing for 10m, present for 73m with value of `0`.
       - series: kube_pod_container_status_ready
         values: "stale _x10 0+0x12 stale _x10 0+0x72"
+      # missing for 10m, present for 25m with value of `0`, missing for 10m, present for 61m with value of `0`.
       - series: kube_pod_labels
         values: "stale _x10 0+0x24 stale _x10 0+0x60"
+      # missing for 10m, present for 37m with value of `0`, missing for 10m, present for 49m with value of `0`.
       - series: kube_pod_status_phase
         values: "stale _x10 0+0x36 stale _x10 0+0x48"
+      # missing for 10m, present for 49m with value of `0`, missing for 10m, present for 37m with value of `0`.
       - series: kube_pod_status_ready
         values: "stale _x10 0+0x48 stale _x10 0+0x36"
+      # missing for 10m, present for 61m with value of `0`, missing for 10m, present for 25m with value of `0`.
       - series: kube_secret_info
         values: "stale _x10 0+0x60 stale _x10 0+0x24"
+      # missing for 10m, present for 73m with value of `0`, missing for 10m, present for 13m with value of `0`.
       - series: rhoam_version
         values: "stale _x10 0+0x72 stale _x10 0+0x12"
+      # missing for 10m, present for 85m with value of `0`, missing for 10m, present for 1m with value of `0`.
       - series: threescale_portals
         values: "stale _x10 0+0x84 stale _x10 0"
+    # In this test suite we are checking whether metric/s are present or not and fire an alert based on that.
+    # If one wants to simulate a metrics
     alert_rule_test:
       # [-] kube_endpoint_address_available
       # [-] kube_pod_container_status_ready
