MGDAPI-4565 add the rbac change make code/gen

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -281,6 +281,12 @@ rules:
   verbs:
   - update
 - apiGroups:
+  - operators.coreos.com
+  resources:
+  - subscriptions
+  verbs:
+  - update
+- apiGroups:
   - rbac.authorization.k8s.io
   resources:
   - clusterrolebindings
