--- a/config/secrets/custom-addon-secret.yaml
+++ b/config/secrets/custom-addon-secret.yaml
@@ -9,6 +9,7 @@ objects:
       name: addon-managed-api-service-parameters
     stringData:
       addon-managed-api-service: ${QUOTA}
+      custom-domain_domain: ${DOMAIN}
       custom-smtp-username: ${USERNAME}
       custom-smtp-address: ${HOST}
       custom-smtp-password: ${PASSWORD}
@@ -18,6 +19,8 @@ parameters:
   - name: QUOTA
     # QUOTA value is per 100,000
     value: "1"
+  - name: DOMAIN
+    value: ""
   - name: USERNAME
     value: "dummy"
   - name: HOST
