--- a/products/products.yaml
+++ b/products/products.yaml
@@ -9,19 +9,19 @@ products:
   - name: 3scale-operator
     version: 3scale-2.11.0-GA
     url: "https://github.com/3scale/3scale-operator"
-    installType: "rhmi/rhoam"
+    installType: "rhoam"
     manifestsDir: "integreatly-3scale"
     quayScan: true
   - name: cloud-resource-operator
     version: v0.41.0
     url: "https://github.com/integr8ly/cloud-resource-operator"
-    installType: "rhoam/rhmi"
+    installType: "rhoam"
     manifestsDir: "integreatly-cloud-resources"
     quayScan: true
   - name: grafana-operator
     version: v4.2.0
     url: "https://github.com/grafana-operator/grafana-operator"
-    installType: "rhoam/rhmi"
+    installType: "rhoam"
     manifestsDir: "integreatly-grafana"
     quayScan: true
   - name: marin3r
@@ -33,13 +33,13 @@ products:
   - name: rhsso-operator
     version: 18.0.x
     url: "git@gitlab.cee.redhat.com:keycloak/keycloak-operator-prod.git"
-    installType: "rhmi/rhoam"
+    installType: "rhoam"
     manifestsDir: "integreatly-rhsso"
     quayScan: true
   - name: keycloak-client
     version: v0.1.8
     url: "https://github.com/integr8ly/keycloak-client"
-    installType: "rhmi/rhoam"
+    installType: "rhoam"
     manifestsDir: "integreatly-keycloak-client"
     quayScan: false
   - name: observability-operator
