--- a/products/products.yaml
+++ b/products/products.yaml
@@ -42,9 +42,9 @@ products:
     installType: "rhmi"
     manifestsDir: "integreatly-monitoring"
     quayScan: true
-  - name: keycloak-operator
-    version: 18.0.0
-    url: "https://github.com/keycloak/keycloak-operator"
+  - name: rhsso-operator
+    version: 18.0.x
+    url: "git@gitlab.cee.redhat.com:keycloak/keycloak-operator-prod.git"
     installType: "rhmi/rhoam"
     manifestsDir: "integreatly-rhsso"
     quayScan: true
