MGDAPI-4654 : Move and rename file
Two PR's merged around the same time one adding this file and one changing the layout of the folder. This fixes the issue.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ nav:
       - End to End (e2e): tests/e2e.md
       - Product tests: tests/product_tests.md
       - Scorecard tests: tests/scorecard_tests.md
+      - Testing Alerts: tests/testing_alerts.md
     - Uninstallation:
       - Local and OLM: uninstallation/local_and_olm.md
       - Addon flow: uninstallation/addon_flow.md
