--- a/products/installation.yaml
+++ b/products/installation.yaml
@@ -56,37 +56,36 @@
 # * `package`: Name of the package. Defaults to the subscription name of each product
 #
 products:
-  3scale:
-    channel: threescale-2.12
-    installFrom: index
-    package: 3scale-operator
-    index: quay.io/integreatly/3scale-index:v0.9.1
-  cloud-resources:
-    channel: rhmi
-    installFrom: index
-    package: rhmi-cloud-resources
-    index: quay.io/integreatly/cloud-resource-operator:index-v0.41.0
-  grafana:
-    channel: rhmi
-    installFrom: local
-    manifestsDir: integreatly-grafana
-  marin3r:
-    installFrom: local
-    manifestsDir: integreatly-marin3r
-    channel: rhmi
-  observability:
-    channel: alpha
-    installFrom: index
-    package: observability-operator
-    index: quay.io/rhoas/observability-operator-index:v3.0.16
-  rhsso:
-    channel: stable
-    installFrom: index
-    package: rhsso-operator
-    index: quay.io/integreatly/rhsso-index:7.6.0-6
-  rhssouser:
-    channel: stable
-    installFrom: index
-    package: rhsso-operator
-    index: quay.io/integreatly/rhsso-index:7.6.0-6
-
+    3scale:
+        channel: threescale-mas
+        installFrom: index
+        package: 3scale-operator
+        index: quay.io/integreatly/3scale-index:v0.10.0-mas
+    cloud-resources:
+        channel: rhmi
+        installFrom: index
+        package: rhmi-cloud-resources
+        index: quay.io/integreatly/cloud-resource-operator:index-v0.41.0
+    grafana:
+        channel: rhmi
+        installFrom: local
+        manifestsDir: integreatly-grafana
+    marin3r:
+        installFrom: local
+        manifestsDir: integreatly-marin3r
+        channel: rhmi
+    observability:
+        channel: alpha
+        installFrom: index
+        package: observability-operator
+        index: quay.io/rhoas/observability-operator-index:v3.0.16
+    rhsso:
+        channel: stable
+        installFrom: index
+        package: rhsso-operator
+        index: quay.io/integreatly/rhsso-index:7.6.0-6
+    rhssouser:
+        channel: stable
+        installFrom: index
+        package: rhsso-operator
+        index: quay.io/integreatly/rhsso-index:7.6.0-6
