--- a/bundles/rhsso-operator/bundles.yaml
+++ b/bundles/rhsso-operator/bundles.yaml
@@ -7,3 +7,5 @@ bundles:
       image: registry.redhat.io/rh-sso-7/sso7-rhel8-operator-bundle:7.6.0-4
     - name: rhsso-operator.7.6.0-6
       image: registry.redhat.io/rh-sso-7/sso7-rhel8-operator-bundle:7.6.0-6
+    - name: rhsso-operator.7.6.0-8
+      image: registry.redhat.io/rh-sso-7/sso7-rhel8-operator-bundle:7.6.0-8
