--- a/bundles/rhsso-operator/bundles.yaml
+++ b/bundles/rhsso-operator/bundles.yaml
@@ -11,3 +11,5 @@ bundles:
       image: registry.redhat.io/rh-sso-7/sso7-rhel8-operator-bundle:7.6.0-8
     - name: rhsso-operator.7.6.0-10
       image: registry.redhat.io/rh-sso-7/sso7-rhel8-operator-bundle:7.6.0-10
+    - name: rhsso-operator.7.6.1-3
+      image: registry.redhat.io/rh-sso-7/sso7-rhel8-operator-bundle:7.6.1-3
