MGDAPI-4810 add pdbs in keycloak and updated rbacs to support working with probes

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -156,6 +156,17 @@ rules:
   - get
   - update
 - apiGroups:
+  - coordination.k8s.io
+  resources:
+  - leases
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - update
+  - watch
+- apiGroups:
   - image.openshift.io
   resources:
   - imagestreams
@@ -221,6 +232,7 @@ rules:
   - monitoring.coreos.com
   resources:
   - podmonitors
+  - probes
   - prometheusrules
   - servicemonitors
   verbs:
