THREESCALE-8772 For TEST Only. Not for merge

--- a/bundles/3scale-operator/bundles.yaml
+++ b/bundles/3scale-operator/bundles.yaml
@@ -25,3 +25,5 @@ bundles:
       image: quay.io/integreatly/3scale-bundle:v0.9.1
     - name: 3scale-operator.v0.10.0-mas
       image: quay.io/integreatly/3scale-bundle:v0.10.0-mas
+    - name: 3scale-operator.v0.10.1
+      image: quay.io/vmogilev_rhmi/3scale-bundle:v0.10.1
