MGDAPI-4706 - increase permissions for when ns is created by hive

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -72,8 +72,10 @@ rules:
   - services
   - subscriptions
   verbs:
+  - create
   - get
   - list
+  - update
   - watch
 - apiGroups:
   - admissionregistration.k8s.io
@@ -112,13 +114,29 @@ rules:
   - list
   - watch
 - apiGroups:
+  - apps.3scale.net
+  resources:
+  - apimanagers
+  verbs:
+  - create
+  - get
+  - list
+  - update
+- apiGroups:
   - apps.openshift.io
   resources:
   - deploymentconfigs
   verbs:
   - get
   - list
+  - update
   - watch
+- apiGroups:
+  - apps.openshift.io
+  resources:
+  - deploymentconfigs/instantiate
+  verbs:
+  - create
 - apiGroups:
   - config.openshift.io
   resources:
@@ -276,13 +294,21 @@ rules:
   resources:
   - installplans
   verbs:
+  - get
   - update
 - apiGroups:
   - operators.coreos.com
   resources:
   - subscriptions
   verbs:
+  - create
   - update
+- apiGroups:
+  - project.openshift.io
+  resources:
+  - projects
+  verbs:
+  - delete
 - apiGroups:
   - rbac.authorization.k8s.io
   resources:
@@ -298,6 +324,8 @@ rules:
   - routes
   verbs:
   - get
+  - list
+  - update
 - apiGroups:
   - samples.operator.openshift.io
   resourceNames:
