--- a/bundles/managed-api-service/1.30.0/manifests/managed-api-service.clusterserviceversion.yaml
+++ b/bundles/managed-api-service/1.30.0/manifests/managed-api-service.clusterserviceversion.yaml
@@ -236,6 +236,16 @@ spec:
                 - apps
               resources:
                 - deployments
+                - replicasets
+                - statefulsets
+              verbs:
+                - get
+                - patch
+                - update
+            - apiGroups:
+                - apps
+              resources:
+                - deployments
                 - statefulsets
               verbs:
                 - get
@@ -428,6 +438,7 @@ spec:
                 - delete
                 - get
                 - list
+                - patch
                 - update
             - apiGroups:
                 - operators.coreos.com
@@ -676,15 +687,6 @@ spec:
                 - list
                 - update
                 - watch
-            - apiGroups:
-                - apps
-              resources:
-                - deployments/finalizers
-                - replicasets
-                - statefulsets
-              verbs:
-                - get
-                - update
             - apiGroups:
                 - marin3r.3scale.net
               resources:
