MGDAPI-4906 restore workshop type cloud resource config

--- a/config/configmap/cro-configmaps.yaml
+++ b/config/configmap/cro-configmaps.yaml
@@ -7,3 +7,5 @@ data:
     {"blobstorage":"openshift", "smtpcredentials":"openshift", "redis":"openshift", "postgres":"openshift"}
   multitenant-managed-api: >
     {"blobstorage":"openshift", "smtpcredentials":"openshift", "redis":"openshift", "postgres":"openshift"}
+  workshop: >
+    {"blobstorage":"openshift", "smtpcredentials":"openshift", "redis":"openshift", "postgres":"openshift"}
